--- a/lancamentos.html
+++ b/lancamentos.html
@@ -18,6 +18,7 @@
                 <ul class="ul">
                     <li> <a href="index.html"> Home </a> </li>
                     <li> <a href="lancamentos.html"> Lançamentos </a> </li>
+                    <li> <a href="#"> Dashboard </a> </li>
                     <li> <a href="contato.html"> Contato </a> </li>
                 </ul>
                 <div class="menu-icon">
