--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul class="ul">
                     <li> <a href="index.html"> Home </a> </li>
                     <li> <a href="lancamentos.html"> Lançamentos </a> </li>
-                    <li> <a href="#"> Dashboard </a> </li>
+                    <li> <a href="https://devjsilva5.github.io/Ford-Angular-Website"> Dashboard </a> </li>
                     <li> <a href="contato.html"> Contato </a> </li>
                 </ul>
                 <div class="menu-icon">
